# azure-sphere-adc-intercore

./: .gitignore  README.md  workspace.code-workspace
hl_Azure_Sphere_IoT/: CMakeLists.txt  app_manifest.json  main_a7.c
hl_Azure_Sphere_IoT/HardwareDefinitions/avnet_mt3620_sk/: template_appliance.json
hl_Azure_Sphere_IoT/HardwareDefinitions/avnet_mt3620_sk/inc/hw/: template_appliance.h
hl_Azure_Sphere_IoT/HardwareDefinitions/mt3620_rdb/: template_appliance.json
hl_Azure_Sphere_IoT/HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
hl_Azure_Sphere_IoT/HardwareDefinitions/seeed_mt3620_mdb/: template_appliance.json
hl_Azure_Sphere_IoT/HardwareDefinitions/seeed_mt3620_mdb/inc/hw/: template_appliance.h
rt_Azure_Sphere_ADC/: CMakeLists.txt  app_manifest.json  main_m4.c
